refactor: WebSecurityConfig refactoring